--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,11 +24,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.no-scrollbar {
-  -ms-overflow-style: none;  /* Internet Explorer 10+ */
-  scrollbar-width: none;  /* Firefox */
-}
-
-.no-scrollbar::-webkit-scrollbar {
-  display: none;  /* Safari and Chrome */
+@layer utilities {
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+  }
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
+  }
 }
