fill out content

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,4 +32,8 @@ body {
   .no-scrollbar::-webkit-scrollbar {
     display: none;  /* Safari and Chrome */
   }
+
+  .min-h-with-footer {
+    min-height: calc(100vh - 77px);
+  }
 }
